added auto mode, auto plot, added trajectory waypoints.

--- a/scurve_engine/CMakeLists.txt
+++ b/scurve_engine/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(scurve_construct LANGUAGES CXX)
+project(scurve_engine LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_STANDARD 11)
@@ -9,9 +9,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(PROJECT_SOURCES
     main.cpp
     scurve_struct.h
-    scurve_construct.h
-    scurve_construct.cpp
+    scurve_engine.h
+    scurve_engine.cpp
+    scurve_segment.h
+    scurve_vector.h
+    scurve_vector.cpp
 )
 
-add_executable(scurve_construct ${PROJECT_SOURCES} )
+add_executable(scurve_engine ${PROJECT_SOURCES} )
 
