--- a/scurve_jog_plot/CMakeLists.txt
+++ b/scurve_jog_plot/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(scurve_construct_plot LANGUAGES CXX)
+project(scurve_jog_plot LANGUAGES CXX)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -10,29 +10,29 @@ find_package(Qt5 COMPONENTS Core Gui Widgets PrintSupport REQUIRED)
 
 include_directories(
     ${CURRENT_SOURCE_DIR}  # Include the current source directory
-    ${CURRENT_SOURCE_DIR}/../scurve_construct  # Include the directory of the scurve_motion module
+    ${CURRENT_SOURCE_DIR}/../scurve_engine  # Include the directory of the scurve_motion module
 )
 
 set(SOURCES
     main.cpp
     mainwindow.cpp
     qcustomplot.cpp
-    ../scurve_construct/scurve_construct.cpp
+    ../scurve_engine/scurve_engine.cpp
 )
 
 set(HEADERS
     mainwindow.h
     qcustomplot.h
-     ../scurve_construct/scurve_construct.h
+     ../scurve_engine/scurve_engine.h
 )
 
 set(FORMS
     mainwindow.ui
 )
 
-add_executable(scurve_construct_plot ${SOURCES} ${HEADERS} ${FORMS})
+add_executable(scurve_jog_plot ${SOURCES} ${HEADERS} ${FORMS})
 
-target_link_libraries(scurve_construct_plot PRIVATE
+target_link_libraries(scurve_jog_plot PRIVATE
     Qt5::Core
     Qt5::Gui
     Qt5::Widgets
